--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <!-- this file is for practice purpose, 
+    feel free to modify it -->
     <header>
         <div class="center">
             <h1>"Hello World"</h1>
