--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
 <body>
     <!-- this file is for practice purpose, 
     feel free to modify it -->
-    <header>
-        <div class="center">
-            <h1>"Hello World"</h1>
-        </div>
-    </header>
+    <section>
+        <h1 class="homeClass">
+            I'm a h1 tag.
+        </h1>
+        <button onclick="addClassDynmically('.homeClass', true)">Add 200px Font Size</button>
+    </section>
 
-    <script src="" async defer></script>
+    <script src="index.js" async></script>
 </body>
 
 </html>
